--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
 script:
   - XDEBUG_MODE=coverage vendor/bin/phpunit --configuration phpunit.xml --coverage-clover php-tests/data/clover.xml
   - PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix --format=txt --verbose --diff --allow-risky=yes --config=.php-cs-fixer.dist.php
-  - vendor/bin/phpstan analyse -c phpstan.`php -r "echo implode('.', array_slice(explode('.', PHP_VERSION), 0, 2));"`.neon
+  - vendor/bin/phpstan analyse -c phpstan.neon
 
 notifications:
   email: "me@kalanys.com"
