kw_routed_paths - reversed steps for parsing aka make external links

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,6 +12,6 @@ parameters:
 	bootstrapFiles:
 		- 'php-tests/_bootstrap.php'
 #	checkGenericClassInNonGenericObjectType: false
-#	ignoreErrors:
-#		# known one
-#		- '#should return array\<int\, string\> but returns array\<int\, string\>\|false\.#'
+	ignoreErrors:
+		# usual strval/intval shit
+		- '#Parameter \#1 \$va[rl]u?e? of function [si][tn][rt]val expects bool\|float\|int\|resource\|string\|null#'
