--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     "license": "BSD-3-Clause",
     "type": "library",
     "require": {
-        "alex-kalanis/kw_paths": ">=3.0",
+        "alex-kalanis/kw_paths": ">=3.1 <4",
         "ext-mbstring": "*",
         "php": ">=7.2.0"
     },
     "require-dev": {
-        "alex-kalanis/kw_input": ">=2.4",
+        "alex-kalanis/kw_input": ">=2.4 <3",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
