--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
     "license": "BSD-3-Clause",
     "type": "library",
     "require": {
-        "alex-kalanis/kw_paths": ">=3.1 <4",
+        "alex-kalanis/kw_paths": ">=4.0 <5",
         "ext-mbstring": "*",
-        "php": ">=7.2.0"
+        "php": ">=7.4.0"
     },
     "require-dev": {
-        "alex-kalanis/kw_input": ">=2.4 <3",
+        "alex-kalanis/kw_input": ">=3.0 <4",
+        "shipmonk/composer-dependency-analyser": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": ">=7.2 <=9"
+        "phpunit/phpunit": ">=8.0 <=9"
     },
     "suggest": {
         "alex-kalanis/kw_input": "Inputs put in the same way - basic interfaces"
